Fix: improve whitespace after lists

--- a/src/02-per-group/type.less
+++ b/src/02-per-group/type.less
@@ -49,3 +49,7 @@ pre code {
     background-color: @panel-bg-color;
     white-space: pre-wrap;
 }
+
+ol, ul {
+    margin-bottom: @type-pica-font-size;
+}
